base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alist
spec:
  serviceName: alist
  replicas: 1
  selector:
    matchLabels:
      app: alist
  template:
    metadata:
      labels:
        app: alist
    spec:
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
        fsGroup: 1000
      containers:
      - name: alist
        image: xhofe/alist:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5244
          name: http
        volumeMounts:
        - name: data
          mountPath: /opt/alist/data
        resources:
          requests:
            cpu: "100m"
            memory: "50Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 5244
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 5244
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
          successThreshold: 1
      volumes: []
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        app: alist
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
      storageClassName: default
