base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5244
    protocol: TCP
    name: http
  selector:
    app: alist
